fixed event list link spacing

--- a/src/components/events/EventCard.css
+++ b/src/components/events/EventCard.css
@@ -10,8 +10,9 @@
     border: 10px black;
     border-radius: 5px;
     justify-content: center;
+    align-items: center;
 }
-.eventCard-link{
+.event-card-link{
     display: grid;
     grid-template-areas: 'name date status';
     grid-template-columns: 1fr 1fr 1fr;
@@ -20,8 +21,9 @@
     text-decoration: none;
     color: white;
     justify-items: center;
+    align-items: center;
 }
-.card-link:hover{
+.event-card-link:hover{
     transform: none;
     background-color:rgb(100, 106, 153);
     font-weight: 600;
